Fixed image alignment in modal pop-up. Generalized HTML element IDs.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.portfolio-image {
+  display: inline
+}
